# acri_trackside_pf34

./: .gitignore
catkin_ws/: READ_ME
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/include/acri_localisation/: controlFromNUC.h  railClosestPair.h  railLineVector.h  railPair.h  railPairVector.h
catkin_ws/devel/include/rtabmap-0.20/rtabmap/core/: Camera.h  CameraStereo.h  CameraThread.h  DBDriver.h  DBDriverSqlite3.h  Features2d.h  Memory.h  Odometry.h  Parameters.h  Rtabmap.h  Transform.h  Version.h
catkin_ws/devel/include/rtabmap-0.20/rtabmap/core/camera/: CameraFreenect.h  CameraFreenect2.h  CameraImages.h  CameraK4W2.h  CameraMyntEye.h  CameraOpenNI2.h  CameraOpenNICV.h  CameraOpenni.h  CameraRGBDImages.h  CameraRealSense.h  CameraRealSense2.h  CameraStereoDC1394.h  CameraStereoFlyCapture2.h  CameraStereoImages.h  CameraStereoVideo.h  CameraStereoZed.h  CameraVideo.h
catkin_ws/devel/include/rtabmap-0.20/rtabmap/gui/: CalibrationDialog.h  CloudViewer.h  DatabaseViewer.h  PreferencesDialog.h
catkin_ws/devel/share/acri_localisation/cmake/: acri_localisation-msg-extras.cmake  acri_localisation-msg-paths.cmake  acri_localisationConfig.cmake
catkin_ws/devel/share/advanced_navigation_driver/cmake/: advanced_navigation_driverConfig.cmake
catkin_ws/devel/share/common-lisp/ros/acri_localisation/msg/: _package.lisp  _package_controlFromNUC.lisp  _package_controlToNUC.lisp  _package_railClosestPair.lisp  _package_railLine.lisp  _package_railLineVector.lisp  _package_railPair.lisp  _package_railPairVector.lisp  acri_localisation-msg.asd  controlFromNUC.lisp  controlToNUC.lisp  railClosestPair.lisp  railLine.lisp  railLineVector.lisp  railPair.lisp  railPairVector.lisp
catkin_ws/devel/share/common-lisp/ros/actionlib_tutorials/msg/: FibonacciAction.lisp  FibonacciActionFeedback.lisp  FibonacciFeedback.lisp
catkin_ws/devel/share/common-lisp/ros/detect_rail/msg/: Num.lisp  _package.lisp  _package_Num.lisp  detect_rail-msg.asd
catkin_ws/devel/share/common-lisp/ros/detect_rail/srv/: AddTwoInts.lisp  _package.lisp  _package_AddTwoInts.lisp  detect_rail-srv.asd
catkin_ws/devel/share/detect_rail/cmake/: detect_rail-msg-extras.cmake  detect_rail-msg-paths.cmake  detect_railConfig.cmake
catkin_ws/devel/share/gennodejs/ros/acri_localisation/msg/: _index.js  controlFromNUC.js  controlToNUC.js  railClosestPair.js  railLine.js  railLineVector.js  railPair.js  railPairVector.js
catkin_ws/devel/share/gennodejs/ros/actionlib_tutorials/msg/: FibonacciAction.js  FibonacciActionFeedback.js  FibonacciFeedback.js  _index.js
catkin_ws/devel/share/gennodejs/ros/detect_rail/msg/: Num.js
catkin_ws/devel/share/gennodejs/ros/detect_rail/srv/: AddTwoInts.js
catkin_ws/devel/share/gennodejs/ros/robot_localization/srv/: _index.js
catkin_ws/devel/share/gennodejs/ros/rtabmap_ros/msg/: _index.js
catkin_ws/devel/share/gennodejs/ros/rtabmap_ros/srv/: _index.js
catkin_ws/devel/share/pose_cov_ops/cmake/: pose_cov_opsConfig.cmake
catkin_ws/devel/share/realsense2_camera/cmake/: realsense2_camera-msg-extras.cmake  realsense2_camera-msg-paths.cmake  realsense2_cameraConfig.cmake
catkin_ws/devel/share/realsense2_description/cmake/: realsense2_descriptionConfig.cmake
catkin_ws/devel/share/robot_localization/cmake/: robot_localization-msg-extras.cmake  robot_localizationConfig.cmake
catkin_ws/devel/share/roseus/ros/acri_localisation/: manifest.l
catkin_ws/devel/share/roseus/ros/acri_localisation/msg/: controlFromNUC.l  controlToNUC.l  railClosestPair.l  railLine.l  railLineVector.l  railPair.l  railPairVector.l
catkin_ws/devel/share/roseus/ros/actionlib_tutorials/: manifest.l
catkin_ws/devel/share/roseus/ros/actionlib_tutorials/msg/: FibonacciAction.l  FibonacciActionFeedback.l  FibonacciFeedback.l
catkin_ws/devel/share/roseus/ros/detect_rail/: manifest.l
catkin_ws/devel/share/roseus/ros/detect_rail/msg/: Num.l
catkin_ws/devel/share/roseus/ros/detect_rail/srv/: AddTwoInts.l
catkin_ws/devel/share/roseus/ros/realsense2_camera/: manifest.l
catkin_ws/devel/share/roseus/ros/robot_localization/: manifest.l
catkin_ws/devel/share/roseus/ros/rosserial_stm32/: manifest.l
catkin_ws/devel/share/roseus/ros/rtabmap_ros/: manifest.l
catkin_ws/devel/share/rosserial_stm32/cmake/: rosserial_stm32Config.cmake
catkin_ws/devel/share/rtabmap_ros/cmake/: rtabmap_ros-msg-extras.cmake  rtabmap_ros-msg-paths.cmake  rtabmap_rosConfig.cmake
catkin_ws/devel/share/serial/cmake/: serialConfig.cmake
catkin_ws/src/acri_localisation/: CMakeLists.txt  package.xml
catkin_ws/src/acri_localisation/cfg/: logger.ini  multi_camera_rtabmap.ini
catkin_ws/src/acri_localisation/include/acri_localisation/: controlToNUC.h  railLine.h
catkin_ws/src/acri_localisation/launch/: acri_rtabmap.launch  multi_camera_data_logger.launch  multi_camera_data_reader.launch  multi_camera_localisation.launch
catkin_ws/src/acri_localisation/msg/: controlFromNUC.msg  controlToNUC.msg  poseEuler.msg  railClosestPair.msg  railLine.msg  railLineVector.msg  railPair.msg  railPairVector.msg
catkin_ws/src/acri_localisation/rviz/: calibration.rviz  multi_camera_localisation.rviz  multi_camera_logger.rviz  multi_camera_reader.rviz  simulation.rviz
catkin_ws/src/acri_localisation/src/: data_logger.cpp  line_detection.cpp  odom_conversion.cpp  odom_publish.cpp  rail_classification.cpp  rail_visualisation.cpp  simulation.cpp  stm32_control.cpp  stm32_visualisation.cpp
catkin_ws/src/advanced_navigation_driver/: Advanced Navigation ROS Driver Notes.txt  CMakeLists.txt  package.xml
catkin_ws/src/advanced_navigation_driver/src/: an_driver.cpp
catkin_ws/src/pose_cov_ops/: CMakeLists.txt  package.xml
catkin_ws/src/rtabmap_ros/launch/: rtabmap.launch
